General fix that removes the blank line / scrollbar being covered
Fixes #2429

- Stop issue with the bottom scroll bar being covered by the footer.

- Centeralised the height calculations and assigned variables to the
  search bar height and the second search bar height.

- Used these newly created variables to calucale the height of the
  editor mount.

--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -15,6 +15,8 @@
   top: 30px;
   left: 0px;
   --editor-footer-height: 27px;
+  --editor-searchbar-height: 27px;
+  --editor-second-searchbar-height: 27px;
 }
 
 html[dir="rtl"] .editor-mount {
@@ -73,12 +75,7 @@ html[dir="rtl"] .editor-mount {
 
 .editor-wrapper .editor-mount {
   width: 100%;
-  height: calc(100% - var(--editor-footer-height));
   background-color: var(--theme-body-background);
-}
-
-.search-bar ~ .editor-mount {
-  height: calc(100% - 72px);
 }
 
 .CodeMirror-linenumber {
